--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,11 +1,11 @@
-public net.minecraft.server.MinecraftServer f_129726_ # nextTickTime
+public net.minecraft.server.MinecraftServer nextTickTimeNanos
 
 # For regen
-public net.minecraft.server.MinecraftServer f_129744_  # storageSource
-public net.minecraft.server.level.ServerChunkCache f_8332_ # mainThreadProcessor
-public net.minecraft.server.level.ServerChunkCache m_8456_(IILnet/minecraft/world/level/chunk/ChunkStatus;Z)Ljava/util/concurrent/CompletableFuture; # getChunkFutureMainThread
+public net.minecraft.server.MinecraftServer storageSource
+public net.minecraft.server.level.ServerChunkCache mainThreadProcessor
+public net.minecraft.server.level.ServerChunkCache getChunkFutureMainThread(IILnet/minecraft/world/level/chunk/ChunkStatus;Z)Ljava/util/concurrent/CompletableFuture;
 
-public net.minecraft.world.level.chunk.ChunkBiomeContainer f_62112_ # biomes
-public-f net.minecraft.world.level.storage.PrimaryLevelData f_244409_ # worldOptions
+public net.minecraft.world.level.chunk.ChunkBiomeContainer biomes
+public-f net.minecraft.world.level.storage.PrimaryLevelData worldOptions
 
-public net.minecraft.network.protocol.game.ClientboundBlockEntityDataPacket <init>(Lnet/minecraft/core/BlockPos;Lnet/minecraft/world/level/block/entity/BlockEntityType;Lnet/minecraft/nbt/CompoundTag;)V # constructor
+public net.minecraft.network.protocol.game.ClientboundBlockEntityDataPacket <init>(Lnet/minecraft/core/BlockPos;Lnet/minecraft/world/level/block/entity/BlockEntityType;Lnet/minecraft/nbt/CompoundTag;)V
