--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-#org.gradle.jvmargs=
+org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 org.gradle.debug=false
 
@@ -12,8 +12,7 @@ minecraft_version=1.20.4
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.20.4,1.21)
 # The Neo version must agree with the Minecraft version to get a valid artifact
-#neo_version=20.4.42-beta
-neo_version=20.4.45-beta
+neo_version=20.4.42-beta
 # The Neo version range can use any version of Neo as bounds or match the loader version range
 neo_version_range=[20.5,)
 # The loader version range can only use the major version of Neo/FML as bounds
@@ -25,9 +24,9 @@ loader_version_range=[1,)
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=worldedit
 # The human-readable display name for the mod.
-mod_name=World Edit
+mod_name=WorldEdit
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=GPL
 # The mod version. See https://semver.org/
 mod_version=1.0.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
@@ -37,10 +36,9 @@ mod_group_id=com.sk89
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=EngineHub
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Ported to NeoForged by Drullkus
+mod_description=Unofficially ported to NeoForged by Drullkus. Zero support offered
 # Pack version - this changes each minecraft release, in general.
 pack_format_number=18
-
 
 PISTON=0.5.7
 AUTO_VALUE=1.9
